plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.1.0.5360"
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	all {
		exclude group: 'commons-logging', module: 'commons-logging'
	}

	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5' // Swagger

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.652'

	//itext
	implementation 'com.itextpdf:kernel:7.2.5'
	implementation 'com.itextpdf:io:7.2.5'
	implementation 'com.itextpdf:layout:7.2.5'
	implementation 'com.itextpdf:font-asian:7.2.5'  // 한글 지원을 위한 아시아 폰트 패키지

	implementation 'org.apache.pdfbox:pdfbox:2.0.29'
	implementation("org.apache.commons:commons-imaging:1.0-alpha3")
	implementation 'javax.xml.bind:jaxb-api:2.3.1'

	// Web3j 의존성
	implementation 'org.web3j:core:4.9.5'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'org.json:json:20230618'

	//word 메타데이터 추가
	implementation("org.apache.poi:poi:5.3.0")
	implementation("org.apache.poi:poi-ooxml:5.3.0")
    implementation 'software.amazon.awssdk:kms:2.31.16'
}

tasks.named('test') {
	useJUnitPlatform()
}
